# simple_calculator

c/: .gitignore  CMakeLists.txt  Makefile  README.md  challenge-1.c  challenge-2-settler.c  common.c  common.h
